<resources>
    <string name="app_name">fb-downloadvp</string>

    <string name="pasteFB">Paste Facebook Video Link</string>
    <string name="download">Download</string>
    <string name="history">History</string>
    <string name="titleApp">Video downloader</string>
    <string name="paste">Paste</string>
    <string name="or">or</string>
    <string name="textBrowse">Browse Facebook</string>
    <string name="text1Browse">Browser your feed and click to the video you want to download it. You can download all</string>
    <string name="noLinkFb">Clipboard doesn\'t contains Facebook link</string>
    <string name="close">Close</string>

    <!--    dialog-->
    <string name="no_Internet">No internet</string>
    <string name="title_Internet">Please check your internet connection and try again</string>
    <string name="howToDownload">How to download</string>

    <string name="sdLoading">SD Loading…</string>
    <string name="hdLoading">HD Loading…</string>
    <string name="audio_Loading">Audio Loading…</string>

    <string name="sdDownload">SD Download</string>
    <string name="hdDownload">HD Download</string>
    <string name="AudioOnly">Audio Only</string>
    <string name="watchVideo">Watch video</string>
    <string name="hdVideoFound">HD Not Found</string>
    <string name="sdVideoFound">SD Not Found</string>
    <string name="audioVideoFound">Audio Not Found</string>
    <string name="title_per1">Allow Storage Permission to save photos</string>
    <string name="title_per2">and videos to your device</string>
    <string name="Allow">Allow</string>
    <string name="goToSetting">Go to setting</string>
    <string name="downloadVideo">Download Video</string>
    <string name="no_status">no video</string>
    <string name="how_to_user">How to user</string>

    <string name="detail">Detail</string>
    <string name="delete">Delete</string>

    <string name="delete_file">Do you want delete this file?</string>
    <string name="yes">Yes</string>
    <string name="Delete_file_success">Delete file success</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="pathVideo">Path</string>
    <string name="bitrate">Bitrate</string>
    <string name="type">Type</string>
    <string name="resolution">Resolution</string>
    <string name="no_video">No video</string>
    <string name="how_to_use">How to use</string>
    <string name="cancel">Cancel</string>
    <string name="delete_failes">Delete failed</string>

    <string name="setting_share_to_friends">Share to friends</string>
    <string name="rate_us">Rate us 5 star</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="policy">Policy</string>
    <string name="setting">Setting</string>


</resources>
