<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:theme="@style/ThemeDialog"
    android:layout_height="match_parent">

    <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout

        android:id="@+id/rlMainNotInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackGround"
        app:corner_radius="10dp">

        <TextView
            android:id="@+id/txtToad"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/llRname"
            android:textStyle="bold"
            android:textColor="@color/color_button"
            android:text="@string/delete_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/rlSuccess"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtToad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="143dp"
                android:textSize="14sp"
                android:gravity="center"
                android:background="@drawable/rip_canecel"
                android:textAllCaps="false"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:textColor="@color/colorBackGround"/>


            <TextView
                android:layout_marginStart="10dp"
                android:background="@drawable/rip_downloading"
                android:layout_toEndOf="@id/txtCancel"
                android:id="@+id/txtYest"
                android:gravity="center"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_width="143dp"
                android:layout_height="50dp"
                android:text="@string/yes"
                android:textColor="@color/colorWhite"/>



        </RelativeLayout>

    </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

</LinearLayout>