<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeDialog">


    <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
        android:id="@+id/rlMainNotInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="@dimen/size_16_dp"
        app:corner_radius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_button"
                android:textSize="@dimen/textsize_14_sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50_dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/size_8_dp"
                    android:ellipsize="middle"
                    android:gravity="center|right"
                    android:singleLine="true"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:background="@color/detail_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:background="@color/detail_black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50_dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pathVideo"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp" />

                <TextView
                    android:id="@+id/txtPath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:ellipsize="start"
                    android:gravity="center|right"
                    android:singleLine="true"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:background="@color/detail_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:background="@color/detail_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50_dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/type"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp" />

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/size_8_dp"
                    android:ellipsize="middle"
                    android:gravity="center|right"
                    android:singleLine="true"
                    android:textColor="@color/detail_black"
                    android:textSize="@dimen/textsize_14_sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:background="@color/detail_black" />
        </LinearLayout>

    </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

</LinearLayout>